files/script/test/parse_error/def/test_def_error1.ll


def def main()
{

}

#script("test/parse_error/def/test_def_error1.nl")
